# geoip

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: production.yaml  testing.yaml
geoip/: app.py  exceptions.py  logger.py  settings.py
geoip/api/: __init__.py  geoip.py  healthcheck.py  models.py
geoip/services/: __init__.py  geoip.py  models.py  services.py
tests/: conftest.py  exceptions_test.py  logger_test.py
tests/api/: conftest.py  geoip_test.py  healthcheck_test.py
tests/services/: geoip_test.py
